----------
v2.0.3-git
----------



------
v2.0.2
------

[jan] Fix moving rules to an explicit position (Bug #10172).
[mms] Fix storage backend conversion script.


------
v2.0.1
------

[mms] Fix folder selection (Bug #9907).
[mms] Fix filtering using the IMAP driver (Bug #9859).


----
v2.0
----

[jan] Fix application-specific permission checks (Bug #9786).
[jan] Correctly escape vacation subjects with quote characters in Maildrop
      driver (Bug #9156).
[jan] Catch all PEAR errors in Sieve driver.
[jan] Allow script drivers to provide additional scripts to upload (Bug #8110).
[jan] Change default Sieve port to 4190 (Request #9791).
[jan] Fix reading default forward rule from preferences.
[jan] Fix removing flags with Sieve driver (Vilius Sumskas <vilius@lnk.lt>,
      Bug #9785).
[mjr] Datatree share to SQL upgrade script refactored for Horde 4.


--------
v2.0-RC2
--------

[jan] Fix updating forward rules in SQL driver (Bug #9699).


--------
v2.0-RC1
--------

[jan] Update installation and upgrade instructions.
[jan] Fix instantiation of VFS transport driver (Bug #9605).
[jan] Fix moving rules with the SQL driver (Bug #9672).


----------
v2.0-BETA1
----------

[jan] Fix creating new rules with PostgreSQL (Bug #9638).


-----------
v2.0-ALPHA1
-----------

[jan] Provide default configuration files instead of .dist versions.
[jan] Rename 'driver' configuration and classes to 'transport' to avoid
      confusion with script and storage drivers.
[mms] Use IMP API for IMAP actions.
[mms] Convert to Horde 4 standards.


------
v1.2.5
------

[jan] Fix procmail vacation rule if no dates are set (Gaudenz Steinlin
      <gaudenz@debian.org>, Bug #8982).
[jan] Fix filtering only unseen message if rule should filter all messages in
      IMAP driver (Jan Kuipers <jrkuipers@lauwerscollege.nl>, Bug #9077).


------
v1.2.4
------

[jan] Correctly escape addresses in procmail driver (Bug #8875).
[jan] Fix procmail scripts when using composite headers (Bug #8804).