@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
  <notes>
-* 
+* [jan] Fix deleting single conditions from a rule (Bug #10253).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -949,7 +949,7 @@
    <date>2011-06-14</date>
    <license uri="http://opensource.org/licenses/bsd-license.php">BSD</license>
    <notes>
-* 
+* [jan] Fix deleting single conditions from a rule (Bug #10253).
    </notes>
   </release>
  </changelog>
