@@ -2,6 +2,7 @@
 v2.0.3-git
 ----------
 
+[jan] Fix deleting single conditions from a rule (Bug #10253).
 
 
 ------
